--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "csurf": "^1.9.0",
     "ejs": "^2.4.2",
     "express": "^4.14.0",
-    "simple-oauth2": "^0.7.0"
+    "simple-oauth2": "^0.7.0",
+    "superagent": "^2.0.0"
   }
 }
