--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "gulp-cli": "^1.2.1",
     "gulp-env": "^0.4.0",
     "gulp-nodemon": "^2.1.0",
-    "openssl-self-signed-certificate": "^1.1.4",
-    "jshint": "^2.9.2"
+    "jshint": "^2.9.2",
+    "openssl-self-signed-certificate": "^1.1.4"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
