Adding start script. (#5)

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "gulp dev",
+    "start": "node server.js",
     "test": "jshint ."
   },
   "repository": {
